# AnimationEditor

./: .gitignore  AnimationEditor.pro  AnimationEditor.pro.autosave  CMakeLists.txt  LICENSE  README.md
AnimationEditor/: AEPDocumentService.h  Animation.cpp  Animation.h  AnimationEditor.cpp  AnimationEditor.h  XMLDocumentService.cpp  XMLDocumentService.h
AnimationEditor/DocumentServices/: AEPDocumentService.h  DocumentService.h  JSONDocumentService.h  XMLDocumentService.h
AnimationEditor/Panels/: AnimationEditorPanel.cpp  AnimationEditorPanel.h  AnimationFramesPanel.cpp  AnimationFramesPanel.h  AnimationsPanel.cpp  AnimationsPanel.h  InputBoxesPanel.cpp  InputBoxesPanel.h
AnimationEditor/Panels/Widgets/: AnimationEditorView.cpp  AnimationEditorView.h
src/: AEPDocumentService.cpp  Animation.h  AnimationEditor.cpp  AnimationEditor.h  DocumentService.h  JSONDocumentService.cpp  JSONDocumentService.h  XMLDocumentService.cpp  XMLDocumentService.h  main.cpp
